# libsurakarta

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
include/: Surakarta.hpp  skattack.h  skengine.h  skmodel.h  skmodeloptions.h  skmove.h
src/: Surakarta.cpp
src/engine/: bitboard.h  context.h  enginetypes.h  movegen.cc  movegen.h  position.cc  position.h  search.h  think.cc  thread.h
src/model/: surakarta.cc
test/: attackpath.cc  skmodel.cc
test/factory/: surakarta_factory.cc  surakarta_factory.h
